# advent-of-code

2024/day_1/src/: day_1.gleam
2024/day_2/src/: day_2.gleam
2024/day_3/: gleam.toml
2024/day_3/src/: day_3.gleam
2025/: AdventOfCode2025.cabal  CHANGELOG.md  LICENSE  flake.nix  hie.yaml
2025/app/: Main.hs
2025/app/Days/: One.hs
2025/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
